# award-search

./: .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
config/: programs.yml
credentials/: awardwallet.yml.example  pushover.yml.example  seats_aero.yml.example  serpapi.yml.example  united.yml.example
src/: __init__.py  awardwallet.py  cli.py  google_flights.py  pushover.py  seats_aero.py  settings.py
src/browser/: __init__.py  manager.py
src/search/: __init__.py  engine.py
src/search/programs/: __init__.py  base.py  delta.py  united.py
src/webui/: app.py
src/webui/templates/: alert_result.html  alerts.html  balances.html  index.html  positioning.html  positioning_results.html  results.html  settings.html
