[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "award-search"
version = "0.1.0"
description = "Docker-based award flight search tool"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.42.0",
    "pyyaml==6.0.1",
    "click==8.1.7",
    "pydantic==2.6.1",
    "python-dateutil==2.8.2",
    "tqdm==4.66.2",
    "loguru==0.7.2",
    "selenium==4.18.1",
]

[project.scripts]
award-search = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]